베이스 프래그먼트 생성 / 사용  - 함수들은 베이스 액티비티와 같은 요령  - mContext 만 onAcrivityCreated 에서 세팅

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,19 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1">
-
         <fragment
             android:id="@+id/firstFrag"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            class="com.soojung.a20191215_03_fragment.fragments.FirstFragment"/>
-
+           class="com.soojung.a20191215_03_fragment.fragments.FirstFragment" />
 
     </LinearLayout>
 
@@ -30,16 +29,16 @@
             android:text="1번 프래그먼트"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
         <Button
             android:id="@+id/secondFragBtn"
             android:text="2번 프래그먼트"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-
+            android:layout_weight="1" />
 
     </LinearLayout>
+
 
 </LinearLayout>
