메인 액티비티에서 프래그먼트들을 보여주고 / 숨기기

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,12 +10,34 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:orientation="vertical"
         android:layout_weight="1">
-        <fragment
-            android:id="@+id/firstFrag"
+
+        <LinearLayout
+            android:id="@+id/firstLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-           class="com.soojung.a20191215_03_fragment.fragments.FirstFragment" />
+            android:layout_height="match_parent">
+            <fragment
+                android:id="@+id/firstFrag"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                class="com.soojung.a20191215_03_fragment.fragments.FirstFragment" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/secondLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <fragment
+                android:id="@+id/secondFrag"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                class="com.soojung.a20191215_03_fragment.fragments.SecondFragment"/>
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
